[workspace]

members = [
    "01-hello_cargo",
    "02-guessing_game",
    "03-common_programming_concepts",
    "04-ownership",
    "05-structs",
    "06-enums_and_pattern_matching",
    "07-packages_crate_modules",
    "08-common_collectios",
    "09-error_handling",
    "10-generic_traits_lifetime",
    "11-automated_tests",
    "12-command_line_program",
    "13-iterators_and_closures",
    "14-cargo_and_cargo_io",
    "15-smart_pointer",
    "16-fearless_concurrency",
    "17-oop",
    "18-pattern_and_matching",
    "19-advanced_features",
    "20-web_server"
]

